@@ -81,6 +81,7 @@
                     "id": "file",
                     "extension": "png or jpg (*.png;*.jpg)|*.png;*.jpg",
                     "empty_message": "Drop a file here!",
+                    "button": "...",
                     "default": "test.txt",
                     "add_quotes": true,
                     "tooltip": "Tooltip!",
@@ -91,6 +92,7 @@
                     "label": "Folder path",
                     "id": "folder",
                     "empty_message": "Drop a folder here!",
+                    "button": "Browse",
                     "default": "testdir",
                     "add_quotes": true,
                     "tooltip": "Tooltip?",
